new js functional

--- a/WeatherApp.csproj
+++ b/WeatherApp.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\js\chart\**" />
+    <Content Remove="wwwroot\js\chart\**" />
+    <EmbeddedResource Remove="wwwroot\js\chart\**" />
+    <None Remove="wwwroot\js\chart\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
       <PrivateAssets>all</PrivateAssets>
