--- a/WeatherApp.csproj
+++ b/WeatherApp.csproj
@@ -27,4 +27,11 @@
     <PackageReference Include="NPOI" Version="2.7.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Data\DeleteYear.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
